# iptv-parser

./: CMakeLists.txt
src/: main.cpp  trim.h
